Compatibilidade com Jetpack

--- a/style.css
+++ b/style.css
@@ -5,4 +5,5 @@
     Author URI: http://siqueiradg.com.br
     Description: A theme developed for use in blogs & portfolio.
     Version: 1.0
+    Tags: black, white, one-column, flexible-width, post-formats
 */
